feat: initial commit

--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@angular-devkit/core": "^21.0.0",
+    "@angular-devkit/schematics": "^21.0.0",
     "@nx/js": "22.1.1",
-    "nx": "22.1.1"
+    "@nxlv/python": "^21.2.0",
+    "nx": "^22.1.1"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@nrwl/workspace": "^19.8.4"
+  }
 }
