--- a/apps/project.json
+++ b/apps/project.json
@@ -1,9 +1,21 @@
 {
   "name": "cv-app",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/cv_app",
   "targets": {
+    "run":{
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "poetry run python main.py",
+        "cwd": "apps/cv_app"
+      },
+      "configurations": {
+        "verbose":{
+          "command":"poetry run python main.py --verbose"
+        }
+      }
+    },
     "lock": {
       "executor": "@nxlv/python:lock",
       "options": {
