--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ out-tsc
 
 # dependencies
 node_modules
-
+.venv 
 # IDEs and editors
 /.idea
 .project
@@ -43,3 +43,4 @@ Thumbs.db
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
 /apps/.venv
+/apps/cv-app/main_simple_cv_setup.py
