--- a/package.json
+++ b/package.json
@@ -5,16 +5,58 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
-    "@angular-devkit/core": "^21.0.0",
-    "@angular-devkit/schematics": "^21.0.0",
-    "@nx/js": "22.1.1",
+    "@angular-devkit/core": "~20.3.0",
+    "@angular-devkit/schematics": "~20.3.0",
+    "@angular/build": "~20.3.0",
+    "@angular/cli": "~20.3.0",
+    "@angular/compiler-cli": "~20.3.0",
+    "@angular/language-service": "~20.3.0",
+    "@eslint/js": "^9.8.0",
+    "@nx/angular": "^22.1.3",
+    "@nx/eslint": "22.1.3",
+    "@nx/eslint-plugin": "22.1.3",
+    "@nx/jest": "22.1.3",
+    "@nx/js": "22.1.3",
+    "@nx/web": "22.1.3",
     "@nxlv/python": "^21.2.0",
-    "nx": "^22.1.1"
+    "@schematics/angular": "~20.3.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/utils": "^8.40.0",
+    "angular-eslint": "^20.3.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "~14.6.1",
+    "jest-util": "^29.7.0",
+    "nx": "^22.1.1",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0"
   },
   "workspaces": [
     "packages/*"
   ],
   "dependencies": {
-    "@nrwl/workspace": "^19.8.4"
+    "@angular/animations": "~20.3.0",
+    "@angular/cdk": "^20.2.14",
+    "@angular/common": "~20.3.0",
+    "@angular/compiler": "~20.3.0",
+    "@angular/core": "~20.3.0",
+    "@angular/forms": "~20.3.0",
+    "@angular/material": "^20.2.14",
+    "@angular/platform-browser": "~20.3.0",
+    "@angular/platform-browser-dynamic": "~20.3.0",
+    "@angular/router": "~20.3.0",
+    "@nrwl/workspace": "^19.8.4",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.15.0"
   }
 }
