add: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,7 @@ Thumbs.db
 .github/instructions/nx.instructions.md
 /apps/.venv
 /apps/cv-app/main_simple_cv_setup.py
+/apps/cv-api/__pycache__/
+/apps/.env 
 
 .angular
