--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.40.0",
@@ -45,6 +46,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@angular-devkit/build-angular": "~20.3.0",
     "@angular/animations": "~20.3.0",
     "@angular/cdk": "^20.2.14",
     "@angular/common": "~20.3.0",
@@ -54,8 +56,11 @@
     "@angular/material": "^20.2.14",
     "@angular/platform-browser": "~20.3.0",
     "@angular/platform-browser-dynamic": "~20.3.0",
+    "@angular/platform-server": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "@angular/ssr": "~20.3.0",
     "@nrwl/workspace": "^19.8.4",
+    "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   }
