feat(e2e): integrate Cypress for end-to-end testing of the CV Detection Dashboard
- Added Cypress configuration and setup for end-to-end tests.
- Created a comprehensive test suite covering dashboard functionality, API integration, and user workflows.
- Implemented Page Object Model for better test organization and maintainability.
- Mocked API responses and WebSocket connections for reliable testing.
- Configured CI workflow for automated testing on push and pull request events.
- Updated package dependencies to include Cypress and related libraries.

--- a/apps/object-detection-ui/project.json
+++ b/apps/object-detection-ui/project.json
@@ -86,6 +86,19 @@
         "staticFilePath": "dist/apps/object-detection-ui/browser",
         "spa": true
       }
+    },
+    "e2e": {
+      "executor": "@nx/cypress:cypress",
+      "options": {
+        "cypressConfig": "apps/object-detection-ui/cypress.config.ts",
+        "tsConfig": "apps/object-detection-ui/tsconfig.e2e.json",
+        "testingType": "e2e"
+      },
+      "configurations": {
+        "ci": {
+          "devServerTarget": "object-detection-ui:serve-static"
+        }
+      }
     }
   }
 }
