--- a/nx.json
+++ b/nx.json
@@ -37,7 +37,7 @@
   },
   "generators": {
     "@nx/angular:application": {
-      "e2eTestRunner": "none",
+      "e2eTestRunner": "cypress",
       "linter": "eslint",
       "style": "scss",
       "unitTestRunner": "jest"
