--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@angular/cli": "~20.3.0",
     "@angular/compiler-cli": "~20.3.0",
     "@angular/language-service": "~20.3.0",
+    "@cypress/angular": "^4.1.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "^22.1.3",
+    "@nx/cypress": "^22.3.3",
     "@nx/eslint": "22.1.3",
     "@nx/eslint-plugin": "22.1.3",
     "@nx/jest": "22.1.3",
@@ -28,6 +30,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.40.0",
     "angular-eslint": "^20.3.0",
+    "cypress": "^15.8.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^29.7.0",
