feat: run e2e cypress test

--- a/apps/object-detection-ui/tsconfig.json
+++ b/apps/object-detection-ui/tsconfig.json
@@ -21,6 +21,10 @@
   },
   "files": [],
   "include": [],
+  "exclude": [
+    "src/**/*.cy.ts",
+    "src/**/*.po.ts"
+  ],
   "references": [
     {
       "path": "./tsconfig.app.json"
